// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarList renders with collapsed avatar count if > 5 users 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "id": "1",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "2",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "3",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "4",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "5",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "6",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
    ]
  }
>
  <Flex
    direction="row-reverse"
  >
    <Base
      className="css-1go71fn"
      direction="row-reverse"
    >
      <div
        className="css-1go71fn"
        is={null}
      >
        <StyledAvatar
          key="1"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "1",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "1",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "1",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "1",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
        <StyledAvatar
          key="2"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "2",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "2",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "2",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "2",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
        <StyledAvatar
          key="3"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "3",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "3",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "3",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "3",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
        <StyledAvatar
          key="4"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "4",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "4",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "4",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "4",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
        <StyledAvatar
          key="5"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "5",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "5",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "5",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "5",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
        <CollapsedUsers
          size={28}
        >
          <Component
            className="css-x39mfn-CollapsedUsers css-zk10lh1"
            size={28}
          >
            <div />
          </Component>
        </CollapsedUsers>
      </div>
    </Base>
  </Flex>
</AvatarList>
`;

exports[`AvatarList renders with user avatars 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "id": "1",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "2",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
    ]
  }
>
  <Flex
    direction="row-reverse"
  >
    <Base
      className="css-1go71fn"
      direction="row-reverse"
    >
      <div
        className="css-1go71fn"
        is={null}
      >
        <StyledAvatar
          key="1"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "1",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "1",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "1",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "1",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
        <StyledAvatar
          key="2"
          size={28}
          user={
            Object {
              "email": "foo@example.com",
              "id": "2",
              "name": "Foo Bar",
              "username": "foo@example.com",
            }
          }
        >
          <Component
            className="css-5o5its-StyledAvatar css-zk10lh0"
            size={28}
            user={
              Object {
                "email": "foo@example.com",
                "id": "2",
                "name": "Foo Bar",
                "username": "foo@example.com",
              }
            }
          >
            <Avatar
              className="css-5o5its-StyledAvatar css-zk10lh0"
              hasTooltip={false}
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "2",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                className="css-5o5its-StyledAvatar css-zk10lh0"
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "2",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  className="css-5o5its-StyledAvatar css-zk10lh0"
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar css-5o5its-StyledAvatar css-zk10lh0"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </Component>
        </StyledAvatar>
      </div>
    </Base>
  </Flex>
</AvatarList>
`;
